git-svn-id: https://odey-ops01.oam.odey.com/svn/odey/StoredProcedureGenerator@11491 a99c24c5-d062-0543-ab10-d6d61a48e989

--- a/StoredProcedureGenerator/StoredProcedureGenerator.csproj
+++ b/StoredProcedureGenerator/StoredProcedureGenerator.csproj
@@ -337,6 +337,9 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FocusList2016NewYearBackup_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FocusList2016NewYearBackup_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FocusList2016NewYearBackup_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FocusListPrices_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FocusListPrices_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FocusListPrices_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ForwardFX_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ForwardFX_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\ForwardFX_Update.sql
@@ -667,6 +670,7 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FocusList2014_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FocusList2015_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FocusList2016NewYearBackup_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\FocusListPrices_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ForwardFX_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FunctionPoint_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Fund_hst.sql
