Generate EntityAnalytic procedures and Remove FundAnalytic procedures

--- a/StoredProcedureGenerator/StoredProcedureGenerator.csproj
+++ b/StoredProcedureGenerator/StoredProcedureGenerator.csproj
@@ -199,6 +199,12 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\DisclosureRule_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\DisclosureRule_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\DisclosureRule_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityAnalytic_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityAnalytic_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityAnalytic_Update.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityAnalyticType_Delete.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityAnalyticType_Insert.sql
+..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityAnalyticType_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityMapping_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityMapping_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\EntityMapping_Update.sql
@@ -349,12 +355,6 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Fund_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Fund_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\Fund_Update.sql
-..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundAnalytic_Delete.sql
-..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundAnalytic_Insert.sql
-..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundAnalytic_Update.sql
-..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundAnalyticType_Delete.sql
-..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundAnalyticType_Insert.sql
-..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundAnalyticType_Update.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundCountryHoliday_Delete.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundCountryHoliday_Insert.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Programmability\Stored Procedures\FundCountryHoliday_Update.sql
@@ -630,6 +630,8 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\DealingDateDefinition_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\DerivedAssetClass_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\DisclosureRule_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\EntityAnalytic_hst.sql
+..\Keeley\Schema Objects\Schemas\dbo\Tables\EntityAnalyticType_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\EntityMapping_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\EntityMappingProxy_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\EntityMappingSet_hst.sql
@@ -680,8 +682,6 @@
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\ForwardFX_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FunctionPoint_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\Fund_hst.sql
-..\Keeley\Schema Objects\Schemas\dbo\Tables\FundAnalytic_hst.sql
-..\Keeley\Schema Objects\Schemas\dbo\Tables\FundAnalyticType_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FundCountryHoliday_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FundGroup_hst.sql
 ..\Keeley\Schema Objects\Schemas\dbo\Tables\FundGroupMember_hst.sql
